[APPDEV-273] in reflect to issue no. 113, fine adjusted the style of deals and tiered prices (was price not bold, was does not show pricing unit, tiered aligned on text views, save x% label moved on sorted text view, etc.)
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@2281 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/pc_ie.css
+++ b/projects/Media/docroot/assets/css/pc_ie.css
@@ -459,6 +459,6 @@ a.usq_left_nav_menu_on:hover {color: #FBF1D3; cursor: pointer; text-decoration: 
 
 .save-label{color:#FF9933;font-weight:bold;}
 .save-price{color:rgb(204,0,0);font-weight:bold;}
-.normal-price{color:black;font-weight:bold;}
+.normal-price{color:#333333;font-weight:bold;}
 .save-base-price{color:rgb(136,136,136);font-weight:normal;}
 .fav-label{color:#996699;font-weight:bold;}
